added the comments section

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -34,7 +34,7 @@
           <input type="text" id="text_<%=bookmark['id']%>" name="text">
           <input type="submit" name="comment_<%=bookmark['id']%>" value="Submit comment">
         </form>
-
+        <%=Comment.all(bookmark['id'])%>
          <br>
       <% end %>
     </ul>
